--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2Progra2
 excludes=
 file.reference.jlayer-1.0.1.jar=C:\\Users\\Hp\\Downloads\\jlayer-1.0.1.jar
+file.reference.mp3agic-0.8.3.jar=C:\\Users\\Hp\\Downloads\\mp3agic-0.8.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jlayer-1.0.1.jar}
+    ${file.reference.jlayer-1.0.1.jar}:\
+    ${file.reference.mp3agic-0.8.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
